--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "concurrently \"npm run start:tailwind\" \"npm run start:nest\"",
+    "start:nest": "nodemon --exec nest start --watch --ignore ./public/output_main.css",
+    "start:tailwind": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,6 +25,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "compression": "^1.7.4",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -31,6 +34,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/hbs": "^4.0.4",
     "@types/jest": "^29.5.2",
@@ -38,13 +42,19 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "daisyui": "^4.12.10",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.4",
+    "postcss": "^8.4.40",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "tailwindcss": "^3.4.7",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
