--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css && nest build",
+    "build": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css --minify && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "concurrently \"npm run start:tailwind\" \"npm run start:nest\"",
     "start:nest": "nodemon --exec nest start --watch --ignore ./public/output_main.css",
-    "start:tailwind": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css --watch",
+    "start:tailwind": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css --minify --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
