--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "compression": "^1.7.4",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
