--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "concurrently \"npm run start:tailwind\" \"npm run start:nest\"",
-    "start:nest": "nodemon --exec nest start --watch --ignore ./public/output_main.css",
+    "start:nest": "nest start --watch",
     "start:tailwind": "tailwindcss -i ./public/input_main.css -o ./public/output_main.css --minify --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
