--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "compression": "^1.7.4",
     "hbs": "^4.2.0",
+    "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
