--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "pg": "^8.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
@@ -49,6 +51,8 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.3.1",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
