--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "cookie": "^1.0.1",
+    "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.13",
     "hbs": "^4.2.0",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
@@ -46,6 +49,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/hbs": "^4.0.4",
     "@types/jest": "^29.5.2",
